--- a/templates/response.html
+++ b/templates/response.html
@@ -18,10 +18,10 @@
 <body class="home_body">
 <img id="logo" src="static/images/logo.png">
 <div class="inline-group position-absolute top-50 start-50 translate-middle">
-    <div class="text-center">
+    <div class="text-center" id="bordered_text">
         Спасибо за заказ!
         <br>
-        Номер вашего заказа - {{ response.uuid }}
+        Номер вашего заказа: {{ response.uuid }}
     </div>
 </div>
 
